# Frequency-dictionary-version-1-

./: README.md  TZ  pyproject.toml
config/: settings.yaml
output/: dictionary_frequency_20000.csv  dictionary_wordforms_alphabetic_ipm5.csv  problem_dates.csv  stage1_report.json  stage2_report.json  stage3_report.json  stage5_report.csv
scripts/: run_full_build.py  run_stage2.py  run_stage3.py  run_stage4.py  run_stage5.py
src/freqdict_project/corpus/: xml_reader.py
src/freqdict_project/ensemble/: __init__.py  consensus.py  schema.py
src/freqdict_project/export/: dictionaries.py  wordforms.py
src/freqdict_project/metadata/: loader.py  stage1_service.py  style_classifier.py  year_parser.py
src/freqdict_project/nlp/: morph_postprocess.py  pos_mapping.py  stage2_service.py  stanza_pipeline.py
src/freqdict_project/stats/: aggregation.py  frequencies.py  likelihood.py  range_dispersion.py  segmentation.py
src/freqdict_project/utils/: settings.py
tests/: test_loader_csv_formats.py  test_rules.py  test_settings_loader.py  test_stage1_service.py  test_stage2_service.py  test_stage3_aggregation.py  test_stage4_dictionaries.py  test_stage5_wordforms.py
